# buildscripts

./: .gitignore  Makefile.am  Makefile.depends  Makefile.in  README  configure  configure.ac  project.config  test
attic/: authors  gitfetch  gitstart  lesstif  libgksu  libgtop  svn2git
def/: CTL  DirectFB  FreeRDP  GConf  ImageMagick  LVM2  LibVNCServer  Linux-PAM  M2Crypto  MPlayer  MailScanner  Mesa  ORBit2  OpenCV  OpenSP  PDFlib-Lite  PyOpenGL  PyQt-x11  Pyrex  Python  Python3  Remmina  SDL  SDL2  SDL2_image  SDL2_net  SDL_mixer  SDL_net  SOPE  TECkit  Terminal  Thunar  TiMidity  TiMidity++  Xaw3d  Xaw3d.save  Xorg  a52dec  abiword  acl  (+773 more)
etc/: cmake_arm.cross  cmake_powerpc.cross  waf_cross_arm.ans  yum_repo.conf.in
etc/builddef/: CTL  ConsoleKit  DirectFB  FreeRDP  GConf  ImageMagick  LVM2  LibVNCServer  Linux-PAM  M2Crypto  MPlayer  MailScanner  Mesa  ORBit2  OpenCV  OpenSP  PDFlib-Lite  PyOpenGL  PyQt-x11  Pyrex  Python  Python3  Remmina  SDL  SDL2  SDL2_image  SDL2_mixer  SDL2_net  SDL_image  SDL_mixer  SDL_net  SOPE  Terminal  Thunar  TiMidity  Transmission  Xaw3d  Xorg  a52dec  abiword  (+860 more)
etc/cmake_cross/: cmake_arm64.cross  cmake_armv5.cross  cmake_armv6.cross  cmake_mips.cross  cmake_mips64.cross  cmake_powerpc64.cross  cmake_ppc.cross  cmake_ppc64.cross
etc/innoconf/: innosetup.iss
etc/skel/etc/: nsswitch.conf
etc/skel/etc/xml/: catalog.xml
etc/skel/root/: .bashrc
etc/waf_cross/: waf_cross_arm64.ans  waf_cross_armv5.ans  waf_cross_armv6.ans  waf_cross_i686.ans  waf_cross_mips.ans  waf_cross_mips64.ans  waf_cross_powerpc.ans  waf_cross_powerpc64.ans  waf_cross_ppc.ans  waf_cross_ppc64.ans  waf_cross_x86_32.ans
git/: bzrclone  gitcleanup  gitclone  gitget  gitpush  gitsync  gitupdate  gitworking  hgclone  mirror  svnclone  svns2git
kernconfig/: arm-bcm2708-dts-4.4.0  arm-bcm2709-dts-4.4.0  arm-multi-dts-4.4.0  armv6-versatile-dts-4.4.0  i686-intel-dts-3.14.17  i686-intel-dts-3.14.4  i686-intel-dts-3.16.3  i686-intel-dts-3.19.8  i686-intel-dts-4.4.0  i686-intel-dts-4.4.0-rc6  mips64-cavium-octeon  mips64-cavium-octeon-2.6.32  x86_32-intel-dts-3.14.17  x86_32-intel-dts-3.14.4  x86_32-intel-dts-3.16.3  x86_32-intel-dts-3.19.8  x86_32-intel-dts-4.4.0  x86_32-intel-dts-4.4.0-rc6  x86_64-intel-dts-3.14.17  x86_64-intel-dts-3.14.4  x86_64-intel-dts-3.16.3  x86_64-intel-dts-3.19.8  x86_64-intel-dts-4.4.0  x86_64-intel-dts-4.4.0-rc6  x86_64-linux-gnu
libexec/: make_PyQt-x11  make_Xorg  make_apache-ant  make_boost  make_busybox  make_docbook  make_docbook-4.2  make_docbook-4.5  make_docbook-xsl  make_firefox  make_gs-fonts  make_iproute2  make_openssl  make_openssl-0.9.8  make_perl  make_qt-4-bin.in  make_qt-5  make_qt-5.in  make_sendmail  make_sip  make_sip.in  make_syslinux  make_thunderbird  make_xulrunner  make_yodl
lsb/: Makefile
patches/: webkitgtk-2.3.90.patch
pkglist/: core  dev  gui  java  obsolete  root
res/etc/: group  passwd  shadow
res/etc/xml/: docbook-xsl.xml  docbook.xml
res/root/: .bashrc
res/root/.cpan/CPAN/: MyConfig.pm
res/usr/sbin/: build_system
scripts/: basebuild  build  build-ecj  buildall  buildcross  buildfail  buildnopt  buildstamp  chainsetup  cleantree  cmake_arm.cross  cmake_win32.cross  cmake_win64.cross  cmake_x86_64.cross  diffbuild  getX  glibc_insthead  installpkg  lsstraycat  make_Xorg  make_apache-ant  make_boost  make_cc_destdir  make_clisp  make_docbook  make_docbook-xsl  make_gs-fonts  make_icedtea6.old  make_icmake  make_lsof  make_nss-old  make_openssl  make_p7zip  make_perl  make_perl.old  make_po4a  make_python  make_qt-4  make_qt-5  make_scons  (+22 more)
